# Todo_HTMX_OCaml

./: dune-project  tailwind.config.js
_build/: .db  .digest-db  log
_build/default/: Todo_HTMX_OCaml.dune-package  Todo_HTMX_OCaml.install  Todo_HTMX_OCaml.opam
_build/default/lib/: Todo_HTMX_OCaml.cma  Todo_HTMX_OCaml.cmxa  Todo_HTMX_OCaml.cmxs
_build/default/lib/.Todo_HTMX_OCaml.objs/byte/: todo_HTMX_OCaml.cmi  todo_HTMX_OCaml.cmo  todo_HTMX_OCaml.cmt
_build/default/lib/.Todo_HTMX_OCaml.objs/native/: todo_HTMX_OCaml.cmx
_build/default/lib/.merlin-conf/: lib-Todo_HTMX_OCaml
_build/default/lib/htmx/: htmx.cma  htmx.cmxa  htmx.cmxs  htmx.ml  htmx.mli
_build/default/lib/htmx/.htmx.objs/byte/: htmx.cmi  (+3 more)
_build/default/lib/htmx/.merlin-conf/: lib-htmx
_build/default/lib/templates/: base_templates.ml  css_templates.ml  templates.cma  templates.cmxa  templates.cmxs  templates.ml-gen  utils.ml
_build/default/lib/templates/.merlin-conf/: lib-templates
_build/default/lib/templates/.templates.objs/: templates__Base_templates.impl.all-deps  templates__Base_templates.impl.d  templates__Css_templates.impl.d  templates__Utils.impl.d
_build/default/test/.Todo_HTMX_OCaml.eobjs/byte/: dune__exe__Todo_HTMX_OCaml.cmi  dune__exe__Todo_HTMX_OCaml.cmti
_build/default/test/.Todo_HTMX_OCaml.eobjs/native/: dune__exe__Todo_HTMX_OCaml.cmx
_build/default/test/.merlin-conf/: exe-Todo_HTMX_OCaml
_build/install/default/lib/Todo_HTMX_OCaml/: META  dune-package  opam
css/: compiled.css
lib/: dune
lib/htmx/: dune
lib/templates/: base_templates.ml  dune
test/: dune
(+17 files in other folders)
