(lang dune 3.9)

(name Todo_HTMX_OCaml)

(generate_opam_files true)

(source
 (github Alfagov/Todo_HTMX_OCaml))

(authors "Lorenzo Pulcini")

(maintainers "Lorenzo Pulcini")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Todo_HTMX_OCaml)
 (synopsis "Todo MVC using OCaml and HTMX through Tyxml")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
